--- a/sound-shaper/public/locales/uk/Translation.json
+++ b/sound-shaper/public/locales/uk/Translation.json
@@ -1,4 +1,5 @@
 {
+	"Alert!": "Попередження!",
 	"Description": "Опис",
 	"Displacement of the sound": "Розташування звуку",
 	"Your audio is in 2-channel, please choose 1-channel audio.": "Ваше аудіо є 2-ох канальним, будь ласка, оберіть 1 канальне аудіо.",
